<resources>
    <string name="app_name">AddressBook</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="address">Адрес</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="output_name">Имя:</string>
    <string name="output_surname">Фамилия:</string>
    <string name="output_address">Адрес:</string>
    <string name="output_phone">Телефон:</string>
    <string name="person_card">Карточка персоны</string>
</resources>